--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@iconify/iconify": "^3.1.1",
+    "@iconify/react": "^5.0.1",
     "@mui/material": "^5.15.21",
     "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.397.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
